# RD60xx_ETH-Bridge-RP2040-

./: CMakeLists.txt  README.md  config.json
PCB/Eagle/: pcb.brd  pcb.sch
docs/: USAGE.md
include/: bridge.h  config.h  ethernet.h  ff.h  ffconf.h  lwip_errno.h  lwipopts.h  telnet.h  webserver.h  ws2812.h
include/arch/: cc.h  lwipopts.h  sys_arch.h
src/: bridge.c  config.c  ethernet.c  lwip_errno.c  main.c  sys_arch.c  telnet.c  webserver.c  ws2812.c  ws2812.pio
webui/: index.html  script.js  style.css
